# calculator-rs

./: Cargo.toml
calculator/: Cargo.toml  README.md
calculator-cli/: Cargo.toml
calculator-cli/src/: main.rs
calculator/src/: lib.rs
